--- a/projects/primary-button-directive/package.json
+++ b/projects/primary-button-directive/package.json
@@ -1,12 +1,13 @@
 {
   "name": "primary-button-directive",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0"
+    "@angular/common": "^18.1.2",
+    "@angular/core": "^18.1.2",
+    "base-text-button-directive": "^0.0.1"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.3"
   },
   "sideEffects": false
 }
