--- a/projects/tertiary-icon-button-directive/package.json
+++ b/projects/tertiary-icon-button-directive/package.json
@@ -2,11 +2,12 @@
   "name": "tertiary-icon-button-directive",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0"
+    "@angular/common": "^18.1.2",
+    "@angular/core": "^18.1.2",
+    "base-icon-button-directive": "^0.0.1"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.3"
   },
   "sideEffects": false
 }
